Fix customers responsive alignment

--- a/scss/components/_customers.scss
+++ b/scss/components/_customers.scss
@@ -15,7 +15,7 @@
       min-width: initial;
       width: 85%;
     }
-    @media (max-width: 425px) {
+    @media (max-width: 626px) {
       width: 100%;
       align-items: initial;
       margin: 7rem auto 0 auto;
@@ -25,7 +25,7 @@
     font-size: 3.6rem;
     text-align: center;
     color: #2f281e;
-    @media (max-width: 425px) {
+    @media (max-width: 626px) {
       text-align: left;
     }
   }
@@ -37,7 +37,7 @@
     line-height: 2.6rem;
     color: #567592;
     text-align: center;
-    @media (max-width: 425px) {
+    @media (max-width: 626px) {
       text-align: left;
     }
   }
